[package]
name = "cfp"
version = "0.1.0"
edition = "2021"
description = "CamelFlagProtocol – encrypted covert file transfer over HTTP"

[[bin]]
name = "cfp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# HTTP client (blocking for sender threads)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Crypto
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Channels
crossbeam-channel = "0.5"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
